<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_dog_bringup</name>
  <version>0.1.0</version>
  <description>
    Composite-пакет: запускает один Gazebo Harmonic с общим миром,
    спавнит мобильную mecanum-платформу с прикреплённым Z1 (mobile_z1)
    и спавнит модель входной группы (entrance_group_v3) на нужной позе.
    Также содержит preview-узел mecanum_kinematics_node, преобразующий
    /cmd_vel в скорости 4 колёс.
  </description>
  <maintainer email="sgerget74@gmail.com">Avtor Gerodot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>z1_model</exec_depend>
  <exec_depend>mobile_base_model</exec_depend>
  <exec_depend>entrance_group_v3</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
