<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>entrance_group_v3</name>
  <version>0.1.0</version>
  <description>
    URDF/SDF модели входной группы подъезда (стена, дверь с доводчиком,
    домофон с нажимными кнопками) для симуляции в Gazebo Harmonic + ROS2 Jazzy.
    Используется для отработки сценария "робот Unitree B2 + Z1 открывает дверь подъезда".
  </description>
  <maintainer email="sgerget74@gmail.com">Avtor Gerodot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
